--- a/rest-whiteship/src/main/resources/application.properties
+++ b/rest-whiteship/src/main/resources/application.properties
@@ -1,2 +1,17 @@
 spring.jackson.deserialization.fail-on-unknown-properties=true
-#unknown-properties가 있으면 실패하라
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+logging.level.org.springframework.security=DEBUG
+#
+#my-app.admin-username=admin@email.com
+#my-app.admin-password=admin
+#my-app.user-username=user@email.com
+#my-app.user-password=user
+my-app.client-id=myApp
+my-app.client-secret=pass
